src/Clients/CustomVisuals/visuals/bulletChart/styles/bulletChart.less
/*
 *  Power BI Visualizations
 *
 *  Copyright (c) Microsoft Corporation
 *  All rights reserved. 
 *  MIT License
 *
 *  Permission is hereby granted, free of charge, to any person obtaining a copy
 *  of this software and associated documentation files (the ""Software""), to deal
 *  in the Software without restriction, including without limitation the rights
 *  to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
 *  copies of the Software, and to permit persons to whom the Software is
 *  furnished to do so, subject to the following conditions:
 *
 *  The above copyright notice and this permission notice shall be included in 
 *  all copies or substantial portions of the Software.
 *
 *  THE SOFTWARE IS PROVIDED *AS IS*, WITHOUT WARRANTY OF ANY KIND, EXPRESS OR 
 *  IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, 
 *  FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE 
 *  AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER 
 *  LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 *  OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
 *  THE SOFTWARE.
 */

@import (reference) "../../../styles/styles.less";

.bulletChart {
    overflow: auto;

    .bullet {
        font-family: @regularFontFamily;
        font: 12px;
        fill-opacity: 1;

        .column {
            shape-rendering: crispEdges;
        }

        .title {
            font-size: 14px;
            font-weight: bold;
        }

        .subtitle, .axis {
            font-size: 11px;
        }

        .marker {
            stroke-width: 2px;
            z-index: 999;
        }

        .axis {
            path {
                stroke-width: 0px;
                fill: none;
            }

            line {
                stroke-width: 0.5px;
            }
        }
    }
}

